<resources>
    <!-- App Name -->
    <string name="app_name">News</string>

    <!-- Strings -->
    <string name="headlines">Headlines</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>

    <string name="version" >Version</string>
    <string name="dark_mode_icon" translatable="false">Dark Mode Icon</string>
    <string name="change_language">Change Language</string>

    <string name="preferences">Preferences</string>
    <string name="preferences_image_description" translatable="false">preference_image</string>
    <string name="search_news_hint">Search news…</string>

    <string name="source" translatable="false">SOURCE</string>
    <string name="title" translatable="false">TITLE</string>
    <string name="date_time" translatable="false">DATE TIME</string>

    <string name="news_app">News App</string>
    <string name="app_version_value" translatable="false">1.0.0</string>
    <string name="settings">Settings</string>

    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="myanmar" translatable="false">Myanmar</string>

    <string name="thai" translatable="false">Thai</string>
    <string name="cancel">Cancel</string>
    <string name="version_icon" translatable="false">Version Icon</string>

    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="article">Article News</string>

    <!-- language -->
    <string name="select_language" translatable="false">Select Language</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Burmese</item>
    </string-array>

    <!-- DarkMode -->
    <string name="sys_default" translatable="false">Default</string>
    <string name="light_mode" translatable="false">Light</string>
    <string name="dark_mode">Dark Mode</string>


</resources>