<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white_gray_background"
    android:padding="16dp">

    <!-- Language Headline -->
    <TextView
        android:id="@+id/language_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/language_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Radio Buttons for Language Selection -->
    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_headline">

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_myanmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myanmar"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_thai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thai"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <!-- Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_radio_group" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ripple_color"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
