<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/preferences_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/preferences_image_description"
        android:src="@drawable/news_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preferences_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/language_button"
        app:layout_constraintTop_toBottomOf="@id/preferences_image" />

    <Button
        android:id="@+id/language_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_background"
        android:padding="16dp"
        android:text="@string/change_language"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/preferences_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dark_mode_card"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/nav_background"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/language_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/dark_mode_icon"
                android:src="@drawable/darkmode"
                app:tint="@color/text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_mode"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/version_card"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/nav_background"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/dark_mode_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Version"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
